# CuraEngineAllRemotes

./: .gitignore  Android.mk  BuildGuide.md  CMakeLists.txt  CuraEngine.sdf  CuraEngine.sln  CuraEngine.vcxproj  Makefile  README.md  all_external_commits.txt  build.sh  clipper  debug.sh  fffProcessor.h  gcodeExport.cpp  gcodeExport.h  inset.cpp  main.cpp  remote_branches.txt  remote_branches_unique.txt  settings.cpp  settings.h  shippable.yml  support.h
Linux/: Makefile  README.md
MacOSX/: .cproject  .gitignore  .gitignore~  Makefile~
SourceInsightPro/: Untitled Project.IAB  Untitled Project.IAD  Untitled Project.IMB  Untitled Project.IMD  Untitled Project.PFI  Untitled Project.PO  Untitled Project.PR  Untitled Project.PRI  Untitled Project.PS
Windows/: Makefile  Makefile_Windows_x64  Makefile~
clipper/: CMakeLists.txt
debian/: changelog
jcuraengine/: jcuraengine.cpp  org_jcuraengine_JCuraEngine.h
metamorphe/: machine_settings.py  texture_skin_settings.ini
src/: FffGcodeWriter.cpp  FffGcodeWriter.h  FffPolygonGenerator.cpp  FffProcessor.h  LayerPlanBuffer.cpp  LayerPlanBuffer.h  MeshGroup.cpp  MeshGroup.h  Preheat.h  bridge.cpp  bridge.h  carpal.cpp  carpal.h  clipper  color.cpp  color.h  comb.h  commandSocket.cpp  commandSocket.h  fffProcessor.cpp  fffProcessor.h  gcodeExport.cpp  gcodeExport.h  gcodePlanner.cpp  gcodePlanner.h  infill.cpp  infill.h  inset.cpp  main.cpp  mesh.cpp  mesh.h  pathOrderOptimizer.cpp  pathOrderOptimizer.h  settings.cpp  settings.h  skin.cpp  sliceDataStorage.h  slicer.cpp  slicer.h  support.cpp  (+1 more)
tests/: ASTMD638_specimen.stl  (+7 more)
(+64 files in other folders)
